learning-kubernetes/kube-poc/tls-secret-check-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tls-secret-check-pod
  namespace: poc
spec:
  containers:
  - name: tls-secret-check
    image: kaustubhdesai/kubepoc:tls-secret-check
    volumeMounts:
    - name: api-keys-vol
      mountPath: "/opt/api-keys"
      readOnly: true
  volumes:
  - name: api-keys-vol
    secret:
      secretName: api-keys
      items:
      - key: tls.crt
        path: public_key.pem
      - key: tls.key
        path: private_key.pem
