learning-kubernetes/kube-poc/core-service.yaml
apiVersion: v1
kind: Service
metadata:
    # use below name as hostname while interacting with core API service.
    name: core-service
spec: 
    ports:
        - targetPort: 8080
          port: 8080
    selector:
        app: core
        tier: backend
