learning-kubernetes/kube-poc/local-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: local-service-internal
spec: 
    ports:
        - targetPort: 8081
          port: 8081
    selector:
        app: local
        tier: backend
