learning-kubernetes/kube-poc/local-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: local-service
spec: 
    type: NodePort
    ports:
        - targetPort: 8081
          port: 8081
          nodePort: 30018
    selector:
        app: local
        tier: backend
