learning-kubernetes/kube-poc/wrapper-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: wrapper-service-internal
spec: 
    ports:
        - targetPort: 8081
          port: 80
    selector:
        app: wrapper
        tier: backend
