learning-kubernetes/kube-poc/wrapper-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: wrapper-service
spec: 
    type: NodePort
    ports:
        - targetPort: 8081
          port: 8081
          nodePort: 30008
    selector:
        app: wrapper
        tier: backend
