learning-kubernetes/kube-poc/nginx-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wrapper-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: default
spec:
  rules:
  - host: kube-poc.kdslabs.co.in
    http: 
      paths:
        - path: /local/(.*)
          pathType: Prefix
          backend:
            service:
              name: local-service-internal
              port:
                number: 8081
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: wrapper-service-internal
              port:
                number: 80
